an update version of the readme file